# data_anonymizer

./: README.md  pyproject.toml  setup.py
data_anonymizer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
df_anonymizer/: __init__.py  evaluation.py  generalization.py  masking.py  perturbation.py  pseudonymization.py  shuffling.py  suppression.py
df_anonymizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
