[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "df_anonymizer"
version = "0.1.6"
description = "A Python library for anonymizing and transforming data in pandas DataFrames, including masking, suppression, perturbation, permutation, generalization, and pseudonymization."
authors = [
    { name="Tan Shih Jen" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas>=2.3.0,<3.0.0",
    "numpy>=2.0.2,<3.0.0"
    ]

[tool.setuptools.packages.find]
where = ["."]